--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "eslint": "8.14.0",
     "eslint-plugin-vue": "8.7.1",
     "nuxt": "3.0.0-rc.1",
+    "postcss-nested": "5.0.6",
+    "postcss-simple-vars": "^6.0.3",
     "typescript": "4.6.3",
     "vite-plugin-eslint": "1.6.0"
-  }
+  },
+  "dependencies": {}
 }
