--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "typescript": "4.6.3",
     "vite-plugin-eslint": "1.6.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@pinia/nuxt": "0.1.8",
+    "pinia": "2.0.13"
+  }
 }
