--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@typescript-eslint/parser": "5.21.0",
     "eslint": "8.14.0",
     "eslint-plugin-vue": "8.7.1",
-    "nuxt": "3.0.0-rc.1",
+    "nuxt": "npm:nuxt3@latest",
     "postcss-nested": "5.0.6",
     "postcss-simple-vars": "^6.0.3",
     "typescript": "4.6.3",
